--- a/.github/workflows/web-tests.yml
+++ b/.github/workflows/web-tests.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npm run play:run
       - name: Upload test report
